[gd_scene load_steps=8 format=2]

[ext_resource path="res://SPRITES/tm_inventory.png" type="Texture" id=1]
[ext_resource path="res://SPRITES/Instruction Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://SPRITES/coin_icon.png" type="Texture" id=3]
[ext_resource path="res://SCRIPTS/inventory.gd" type="Script" id=4]
[ext_resource path="res://SPRITES/PDG_symbol.png" type="Texture" id=5]

[sub_resource type="TileSet" id=1]
0/name = "tm_inventory.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 256, 256 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 250
font_data = ExtResource( 2 )

[node name="inventory" type="Node2D"]
script = ExtResource( 4 )

[node name="tm_inventory" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 65536, 65536, 0, 65536, 65537, 0, 65536, 65538, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 131072, 0, 65536, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 196608, 0, 65536, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65536, 196614, 0, 65536 )

[node name="tm_inventory2" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 65536, 65536, 0, 65536, 65537, 0, 65536, 65538, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 131072, 0, 65536, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 196608, 0, 65536, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65536, 196614, 0, 65536 )

[node name="tm_inventory3" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 65537, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 65536, 65536, 0, 65536, 65537, 0, 65536, 65538, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 131072, 0, 65536, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 196608, 0, 65536, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65536, 196614, 0, 65536 )

[node name="tm_inventory4" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 65537, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 65536, 65536, 0, 65536, 65537, 0, 65536, 65538, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 131072, 0, 65536, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 196608, 0, 65536, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65536, 196614, 0, 65536 )

[node name="coin_icon" type="Sprite" parent="."]
position = Vector2( 312, 600 )
texture = ExtResource( 3 )

[node name="lb_money" type="Label" parent="coin_icon"]
margin_left = 168.0
margin_top = -192.0
margin_right = 606.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PDG_symbol" type="Sprite" parent="."]
position = Vector2( 1368, 624 )
texture = ExtResource( 5 )
